Chygoz,Rim| 28| Header,logo,slider and Footer

--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -28,10 +28,19 @@
 
 
 
-
     <div id="menu" class="clear">
 
-        <a href="#"><div class="logo"><img height="4%" src="/static/images/ksclogo1.png" alt="logo"></div></a>
+
+
+        <a href="#"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
+
+ <div class="box">
+  <div class="container-4">
+    <input type="search" id="search" placeholder="Search..." />
+    <button class="icon"><i class="fa fa-search"></i></button>
+  </div>
+</div>
+
         <ul align="center" id="bar">
             <li><a href="aboutus.html">About Us</a></li>
             <li><a href="gallery.html">Gallery</a></li>
@@ -40,9 +49,10 @@
             <li><a href="login.html">Login</a></li>
             <li><a href="registration.html">Registration</a></li>
         </ul>
+
     </div>
 
-        
+
     
 </header>
 
@@ -57,16 +67,16 @@
     <article class="slider_block" aligin="center">
         <ul id="slider">
             <li>
-                <a href="#slide1"><img src="/static/images/1.jpg"></a>
+                <a href="#slide1"><img src="/static/images/1.png"></a>
             </li>
             <li>
-                <a href="#slide2"><img src="/static/images/2.jpg"></a>
+                <a href="#slide2"><img src="/static/images/2.png"></a>
             </li>
             <li>
-                <a href="#slide3"><img src="/static/images/3.jpg"></a>
+                <a href="#slide3"><img src="/static/images/3.png"></a>
             </li>
             <li>
-                <a href="#slide4"><img src="/static/images/4.jpg"></a>
+                <a href="#slide4"><img src="/static/images/4.png"></a>
             </li>
         </ul>
     </article>
@@ -88,14 +98,14 @@ $(function() {
 </script>
 </section>
 
-<footer align="center">
 
 
 
-  <div class="container-fluid">
+
+  <div class="container-fluid" align="center">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Welcome To Knowledge Sharing Campaign</h1>
+      <h1 id="m"class="text-center">Welcome To Knowledge Sharing Campaign</h1>
     </div>
   </div>
   <hr>
@@ -136,7 +146,7 @@ The fun is in making the connections.<br><strong>Arthur Aufderheide</strong>
       </div>
     </div>
   </div>
-
+<footer align="center">
   <hr>
   <div class="row">
     <div class="text-center col-md-6 col-md-offset-3">
@@ -144,19 +154,17 @@ The fun is in making the connections.<br><strong>Arthur Aufderheide</strong>
       <div>
 
         <p>
-            
-
-
-
- 
-
-
        
     </div>
 
+<div id="patcont">
 
+<a id="contact-us" href="javascript:;"><font size="3" font color="black">Contact Us | <a id="partners" href="javascript:;">Partners </font></a>
 
-<a id="contact-us" href="javascript:;"><font size="3" font color="black">Contact Us |</a>  <a id="partners" href="javascript:;">Partners </font></a>
+</a> 
+
+</div>
+
 <div id="socialmedia" align="right">
 
 
