Rim | #41 |login and forgot password

--- a/app/app_core/templates/events.html
+++ b/app/app_core/templates/events.html
@@ -10,7 +10,7 @@
 </center>
 <div header>
     <h3>
-				<table border="1" width="100%" id="Table1">
+				<table border="1 width="100%" id="Table1">
 					<tr align="center">
 						<td><a href="/">Home</a></td>
 						<td><a href="aboutus">About Us</a></td>
