--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -40,13 +40,17 @@
     <button class="icon"><i class="fa fa-search"></i></button>
   </div>
 </div>
-
         <ul align="center" id="bar">
             <li><a href="aboutus.html">About Us</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="forum.html">Forum</a></li>
             <li><a href="upcomingevents.html">Events</a></li>
             <li><a href="login.html">Login</a></li>
+            <li><a href="/aboutus">About Us</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/forum">Forum</a></li>
+            <li><a href="/upcomingevents">Events</a></li>
+            <li><a href="/login">Login</a></li>
             <li><a href="/register">Registration</a></li>
         </ul>
 
