--- a/app/app_core/templates/login.html
+++ b/app/app_core/templates/login.html
@@ -1,154 +1,131 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
-<title>Popup Login and Register</title>
-<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
-<link type="text/css" rel="stylesheet" href="css/style.css" />
+				<title>Popup Login and Registration</title>
+				<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+				<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+				<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
+				<link type="text/css" rel="stylesheet" href="css/style.css" />
+	<body>
+			    <div class="container">
+				<a id="modal_trigger" href="#modal" class="btn">Click here to Login or register</a>
+				<div id="modal" class="popupContainer" style="display:none;">
+					<header class="popupHeader">
+						<span class="header_title">Login</span>
+						<span class="modal_close"><i class="fa fa-times"></i></span>
+					</header>
+					<section class="popupBody">
+						<!-- Social Login -->
+						<div class="social_login">
+							<div class="">
+								<a href="#" class="social_box fb">
+									<span class="icon"><i class="fa fa-facebook"></i></span>
+									<span class="icon_title">Connect with Facebook</span>		
+								</a>
+								<a href="#" class="social_box google">
+									<span class="icon"><i class="fa fa-google-plus"></i></span>
+									<span class="icon_title">Connect with Google</span>
+								</a>
+							</div>
+							<div class="centeredText">
+								<span>Or use your Email address</span>
+							</div>
+							<div class="action_btns">
+								<div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
+								<div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
+							</div>
+						</div>
+						<!-- Username & Password Login form -->
+						<div class="user_login">
+							<form>
+								<label>Email / Username</label>
+								<input type="text" />
+								<br />
+								<label>Password</label>
+								<input type="password" />
+								<br />
+								<div class="checkbox">
+									<input id="remember" type="checkbox" />
+									<label for="remember">Remember me on this computer</label>
+								</div>
+								<div class="action_btns">
+									<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
+									<div class="one_half last"><a href="#" class="btn btn_red">Login</a></div>
+								</div>
+							</form>
 
-<body>
-<div class="container">
-	<a id="modal_trigger" href="#modal" class="btn">Click here to Login or register</a>
+							<a href="#" class="forgot_password">Forgot password?</a>
+						</div>
+						<!-- Register Form -->
+						<div class="user_register">
+							<form>
+								<label>Full Name</label>
+								<input type="text" />
+								<br />
 
-	<div id="modal" class="popupContainer" style="display:none;">
-		<header class="popupHeader">
-			<span class="header_title">Login</span>
-			<span class="modal_close"><i class="fa fa-times"></i></span>
-		</header>
-		
-		<section class="popupBody">
-			<!-- Social Login -->
-			<div class="social_login">
-				<div class="">
-					<a href="#" class="social_box fb">
-						<span class="icon"><i class="fa fa-facebook"></i></span>
-						<span class="icon_title">Connect with Facebook</span>
-						
-					</a>
+								<label>Email Address</label>
+								<input type="email" />
+								<br />
 
-					<a href="#" class="social_box google">
-						<span class="icon"><i class="fa fa-google-plus"></i></span>
-						<span class="icon_title">Connect with Google</span>
-					</a>
-				</div>
+								<label>Password</label>
+								<input type="password" />
+								<br />
 
-				<div class="centeredText">
-					<span>Or use your Email address</span>
-				</div>
-
-				<div class="action_btns">
-					<div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
-					<div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
-				</div>
-			</div>
-
-			<!-- Username & Password Login form -->
-			<div class="user_login">
-				<form>
-					<label>Email / Username</label>
-					<input type="text" />
-					<br />
-
-					<label>Password</label>
-					<input type="password" />
-					<br />
-
-					<div class="checkbox">
-						<input id="remember" type="checkbox" />
-						<label for="remember">Remember me on this computer</label>
-					</div>
-
-					<div class="action_btns">
-						<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-						<div class="one_half last"><a href="#" class="btn btn_red">Login</a></div>
-					</div>
-				</form>
-
-				<a href="#" class="forgot_password">Forgot password?</a>
-			</div>
-
-			<!-- Register Form -->
-			<div class="user_register">
-				<form>
-					<label>Full Name</label>
-					<input type="text" />
-					<br />
-
-					<label>Email Address</label>
-					<input type="email" />
-					<br />
-
-					<label>Password</label>
-					<input type="password" />
-					<br />
-
-					<div class="checkbox">
-						<input id="send_updates" type="checkbox" />
-						<label for="send_updates">Send me occasional email updates</label>
-					</div>
-
-					<div class="action_btns">
-						<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-						<div class="one_half last"><a href="#" class="btn btn_red">Register</a></div>
-					</div>
-				</form>
-			</div>
+								<div class="checkbox">
+									<input id="send_updates" type="checkbox" />
+									<label for="send_updates">Send me occasional email updates</label>
+								</div>
+		<div class="action_btns">
+		<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
+		<div class="one_half last"><a href="#" class="btn btn_red">Register</a></div>
+		</div>
+		</form>
+		</div>
 		</section>
-	</div>
-</div>
+		</div>
+		</div>
 
-<script type="text/javascript">
-	$("#modal_trigger").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+				<script type="text/javascript">
+					$("#modal_trigger").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
 
-	$(function(){
-		// Calling Login Form
-		$("#login_form").click(function(){
-			$(".social_login").hide();
-			$(".user_login").show();
-			return false;
-		});
+					$(function(){
+						// Calling Login Form
+						$("#login_form").click(function(){
+							$(".social_login").hide();
+							$(".user_login").show();
+							return false;
+						});
 
-		// Calling Register Form
-		$("#register_form").click(function(){
-			$(".social_login").hide();
-			$(".user_register").show();
-			$(".header_title").text('Register');
-			return false;
-		});
+						// Calling Register Form
+						$("#register_form").click(function(){
+							$(".social_login").hide();
+							$(".user_register").show();
+							$(".header_title").text('Register');
+							return false;
+						});
 
-		// Going back to Social Forms
-		$(".back_btn").click(function(){
-			$(".user_login").hide();
-			$(".user_register").hide();
-			$(".social_login").show();
-			$(".header_title").text('Login');
-			return false;
-		});
-
-	})
-</script>
-
-=======
-<html>
-<head>
-<link rel="stylesheet" type="text/css"  href='../../static/css/login.css'/>
-
+						// Going back to Social Forms
+						$(".back_btn").click(function(){
+							$(".user_login").hide();
+							$(".user_register").hide();
+							$(".social_login").show();
+							$(".header_title").text('Login');
+							return false;
+						});})
+				</script>
+		        <link rel="stylesheet" type="text/css"  href='../../static/css/login.css'/>
 	<title>LOGIN</title>
-</head>
-<body>
-<div>
-<H1>LOGIN</H1>
-<p>
-    <label for="username">Username :<span class="required"></span></label>
-    <input type="text" name="username" id="username">
-  </p>
-  <p> 
-  <label for="password">Password :<span class="required"></span></label>
-    <input type="password" id="password" name="password" value="" placeholder="Password" required="required" autofocus="autofocus"/>
-    <p><button>Submit</button><div1><a href="forgotpassword.html">Forgot Password</a></a>
-</p></div1></p>
-</div>
->>>>>>> Rim.Juma | 41 |login and forgot password
-</body>
+		</head>
+		   <div>
+		   <H1>LOGIN</H1>
+		  <p>
+		    <label for="username">Username :<span class="required"></span></label>
+		    <input type="text" name="username" id="username">
+		  </p>
+		  <p> 
+		  <label for="password">Password :<span class="required"></span></label>
+		    <input type="password" id="password" name="password" value="" placeholder="Password" required="required" autofocus="autofocus"/>
+		    <p><button>Submit</button><div1><a href="forgotpassword.html">Forgot Password</a></a>
+		</p></div1></p>
+		</div>
+		</body>
 </html>
