Joelle, Yashna | #59 | Part of validation

--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -47,7 +47,7 @@
             <li><a href="forum.html">Forum</a></li>
             <li><a href="upcomingevents.html">Events</a></li>
             <li><a href="login.html">Login</a></li>
-            <li><a href="registration.html">Registration</a></li>
+            <li><a href="/register">Registration</a></li>
         </ul>
 
     </div>
