--- a/app/app_core/templates/css/register.css
+++ b/app/app_core/templates/css/register.css
@@ -1,11 +1,20 @@
-body {
+/*body {
     background: url('../../static/images/bg.jpg')no-repeat;
     color: #fff;
     font-size: 20px;
     font-family: regular;
     page-break-after: center;
+}*/
+
+body {
+background-color: #F0F0F0;
+margin-left: 20px;
 }
 
-h1 {
-    background: url('') no-repeat;
+form {
+	display: inline-block;	
+}
+
+textarea {
+	display: inline-block;
 }
