Noor, Yuveshen | home page | Lorem ipsum text

--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -41,12 +41,13 @@
   </div>
 </div>
         <ul align="center" id="bar">
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="forum.html">Forum</a></li>
-            <li><a href="upcomingevents.html">Events</a></li>
-            <li><a href="login.html">Login</a></li>
-             <li><a href="/register">Registration</a></li>
+
+            <li><a href="/aboutus">About Us</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/forum">Forum</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Registration</a></li>
         </ul>
 
     </div>
@@ -111,30 +112,12 @@ $(function() {
 </div>
 <div class="container">
   <div class="row text-center">
-    <div class="col-md-6 col-md-offset-3">Sharing knowledge has helped mankind survive and evolve into the intelligent and productive species he is today. In the animal kingdom and indeed in business, knowledge sharing can make the difference between survival and extinction. <strong>row</strong>. Columns are always contained within a row. <strong>There is no wealth like knowledge,
-and no poverty like ignorance.</strong>. </div>
-  </div>
-  <hr>
-  <div class="row">
-    <div class="text-justify col-sm-4" align="left"> In order to properly understand the big picture,
-everyone should fear becoming mentally clouded and
-obsessed with one small section of truth.<br>
-<strong> Xunzi</strong></div>
-
-
-    <div class="col-sm-4 text-justify"> All knowledge is connected
-to all other knowledge.
-The fun is in making the connections.<br><strong>Arthur Aufderheide</strong>
-</div>
-<div  align="right" >
-    In today’s environment, hoarding knowledge ultimately erodes your power. If you know something very important, the way to get power is by actually sharing it.<br>
-<strong>Joseph L. Badaracco</strong>
-</div>
+    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
   </div>
   <hr>
   <div class="row">
     <div class="text-center col-md-12">
-      <div class="well"><strong> In Africa, when an old man dies, it’s a library burning – Spoken by Amadou Hampâté Bâ 1960 at UNESCO”. Here is a way to value your knowledge..</strong></div>
+      <div class="well" align="center"><strong> In Africa, when an old man dies, it’s a library burning – Spoken by Amadou Hampâté Bâ 1960 at UNESCO”. Here is a way to value your knowledge..</strong></div>
     </div>
   </div>
   
