--- a/app/app_core/templates/gallery.html
+++ b/app/app_core/templates/gallery.html
@@ -1,28 +1,191 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	    <title>Gallery</title>
-	
-	</head>
-	<body style="background-color:#CCE6FF" />
-	<center>
-	    <h1>Knowledge Sharing Campaign</h1>
-	    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
-	</center>
-		<div header>
-			<table border="1" width="100%" id="Table1">
-				<tr font-size="14" align="center">
-					<td><a href="/">Home</a></td>
-					<td><a href="aboutus">About Us</a></td>
-					<td><a href="gallery">Gallery</a></td>
-					<td><a href="events">Events</a></td>
-				</tr>
-			</table>
-		</div>
-	<table>
-		<tr><td><img src="/static/images/1.jpg"></td><td><img src="/static/images/2.jpg"></td></tr>
-		<tr><td><img src="/static/images/3.jpg"></td><td><img src="/static/images/4.jpg"></td></tr>
-		<tr><td><img src="/static/images/5.jpg"></td><td><img src="/static/images/6.jpg"></td></tr>
-	</table>
-	</body>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <title>KSC GALLERY</title>
+    <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width">
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="/static/slippry/dist/slippry.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+<link rel="stylesheet" href="/static/css/home_style.css">
+
+<link rel="stylesheet" href="/static/slippry/dist/slippry.css">
+<link rel="stylesheet" href="/static/css/home.css" type="text/css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
+
+   
+    <script src="/static/galleryengine/jquery.js"></script>
+    <script src="/static/galleryengine/amazingslider.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/galleryengine/amazingslider-1.css">
+    <script src="/static/galleryengine/initslider-1.js"></script>
+   
+    
+</head>
+<header>
+
+    <div id="langbar" align="right">
+        <select>
+            <option>Language</option>
+            <option value="English">English</option>
+            <option value="French">French</option>
+        </select>
+    </div>
+
+
+
+    <div id="menu" class="clear">
+
+
+
+        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
+
+<!--  <div class="box">
+  <div class="container-4">
+    <input type="search" id="search" placeholder="Search..." />
+    <button class="icon"><i class="fa fa-search"></i></button>
+  </div>
+</div>
+ -->
+        <ul align="center" id="bar">
+            <li><a href="/aboutus">About Us</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/forum">Forum</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Registration</a></li>
+        </ul>
+
+    </div>
+
+
+    
+</header>
+
+    </div>
+<body>
+    
+    
+    <div id="amazingslider-wrapper-1" style="display:block;position:relative;max-width:900px;margin:0px auto 102px;">
+        <div id="amazingslider-1" style="display:block;position:relative;margin:0 auto;">
+            <ul class="amazingslider-slides" style="display:none;">
+                <li><img src="/static/galleryimages/1.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                </li>
+                <li><img src="/static/galleryimages/2.jpg" alt="TRAINER TEAM"  title="TRAINER TEAM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                </li>
+                <li><img src="/static/galleryimages/3.jpg" alt="DEV. + UI/UX"  title="DEV. + UI/UX" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                </li>
+                <li><img src="/static/galleryimages/4.jpg" alt="SESSION"  title="SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                </li>
+                <li><img src="/static/galleryimages/5.jpg" alt="BRAIN STORM"  title="BRAIN STORM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                </li>
+                <li><img src="/static/galleryimages/6.jpg" alt="DEV. SESSION"  title="DEV. SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                </li>
+                <li><img src="/static/galleryimages/7.jpg" alt="JOINT SESSION"  title="JOINT SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                </li>
+            </ul>
+            <ul class="amazingslider-thumbnails" style="display:none;">
+                <li><img src="/static/galleryimages/1-tn.jpg" alt="STUDENTS" title="STUDENTS" /></li>
+                <li><img src="/static/galleryimages/2-tn.jpg" alt="TRAINER TEAM" title="TRAINER TEAM" /></li>
+                <li><img src="/static/galleryimages/3-tn.jpg" alt="DEV. + UI/UX" title="DEV. + UI/UX" /></li>
+                <li><img src="/static/galleryimages/4-tn.jpg" alt="SESSION" title="SESSION" /></li>
+                <li><img src="/static/galleryimages/5-tn.jpg" alt="BRAIN STORM" title="BRAIN STORM" /></li>
+                <li><img src="/static/galleryimages/6-tn.jpg" alt="DEV. SESSION" title="DEV. SESSION" /></li>
+                <li><img src="/static/galleryimages/7-tn.jpg" alt="JOINT SESSION" title="JOINT SESSION" /></li>
+            </ul>
+        </div>
+    </div>
+    
+    <footer align="center">
+  <hr>
+  <div class="row">
+    <div class="text-center col-md-6 col-md-offset-3">
+      <h4> </h4>
+      <div>
+
+        <p>
+       
+    </div>
+
+<div id="patcont">
+
+<a id="contact-us" href="javascript:;"><font size="3" font color="black">Contact Us | <a id="partners" href="javascript:;">Partners </font></a>
+
+</a> 
+
+</div>
+
+<div id="socialmedia" align="right">
+
+
+<script>
+            $("#contact-us").click(function() {
+                $.fancybox.open({
+                    href: '/static/htmls/contacts.html',
+                    type: 'iframe',
+                    padding: 2
+                });
+                });
+                </script>
+
+                <script>
+$("#partners").click(function() {
+$.fancybox.open({
+href: '/static/htmls/partners.html',
+type: 'iframe',
+padding: 2
+});
+});
+</script>
+
+<a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
+    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
+</a>
+<a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
+<a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
+    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
+</a>
+
+</div>
+            
+
+
+<li><a id="termscons" href="javascript:;"> <font size="0.5" > &nbsp;&nbsp;Terms&Conditions |</font></a></li>
+<script>
+$("#termscons").click(function() {
+$.fancybox.open({
+href: '/static/htmls/termscons.html',
+type: 'iframe',
+padding: 2
+});
+});
+</script>
+<li><a id="privacy" href="javascript:;"><font size="0.5"> Privacy Policy </font></a></li>
+<script>
+$("#privacy").click(function() {
+$.fancybox.open({
+href: '/static/htmls/privacy.html',
+type: 'iframe',
+padding: 5
+});
+});
+</script>
+      <div id="cpy">
+      <p>Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </p>
+      </div>
+    </div>
+  </div>
+  <hr>
+</div>
+
+
+
+
+
+</footer>
+
+
+    
+</body>
 </html>
